[package]
name = "eth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.3", features = ["rand"] }
once_cell = "1.17.1"
rand = "0.8.5"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
